editors/tree-sitter-dippin/test/corpus/spec_loader.txt
================================================================================
Spec loader workflow with satisfies
================================================================================

workflow SpecDemo
  spec: acai features/x.yaml
  start: A
  exit: B

  agent A
    satisfies: foo.BAR.1, foo.BAR.2
    prompt: implement

  agent B
    prompt: done

  edges
    A -> B

--------------------------------------------------------------------------------

(source_file
  (workflow_decl
    (identifier)
    (workflow_body
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (workflow_field (field_value (raw_inline)))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (node_decl
        (agent_node
          (identifier)
          (node_field (field_name (identifier)) (field_value (raw_inline)))))
      (edges_section
        (edge_entry (identifier) (identifier))))))
